--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 yfinance==0.1.63
+dash==1.21.0
+pandas==1.1.4
+scipy==1.5.4
+plotly==4.13.0
+dash_bootstrap_components==0.13.0
+sklearn==0.23.2
+pandas_datareader==0.10.0
