--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pandas==1.1.4
 scipy==1.5.4
 plotly==4.13.0
 dash_bootstrap_components==0.13.0
-sklearn==0.23.2
+scikit-learn==0.24.0
 pandas_datareader==0.10.0
