--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+gunicorn==20.1.0
 yfinance==0.1.63
 dash==1.21.0
 pandas==1.1.4
 scipy==1.5.4
 plotly==4.13.0
+plotly-express==0.4.1 
 dash_bootstrap_components==0.13.0
 scikit-learn==0.24.0
 pandas_datareader==0.10.0
